syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.stephennimmo.demo";
option java_outer_classname = "HelloRequestReplyProto";

package hello;

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
